--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/bootstrap";
-
 body {
   background-color: #FBF0C6;
+}
+
+nav {
+  background-color: #b1cc3c;
+  box-shadow: 2px 1px 1px rgba($color: #000000, $alpha: .5);
 }
