--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,3 +1,8 @@
 $lightYellow: #FBF0C6;
 $lightOrange: #FAD4A7;
 $froggyGreen: #50641d;
+
+$darkBlack: #212121;
+$darkLightGreen: #C8E6C9;
+$darkOrange: #FF5252;
+$darkGreen: #388E3C;
