edit function works

--- a/src/javascripts/components/displayMsgs/displayMsgs.scss
+++ b/src/javascripts/components/displayMsgs/displayMsgs.scss
@@ -10,6 +10,7 @@
     .modifyMsg{
         color: $froggyGreen;
         border-left: 2px solid $froggyGreen;
+        padding: 0;
 
         button{
             background-color: transparent;
