--- a/src/javascripts/components/displayMsgs/displayMsgs.scss
+++ b/src/javascripts/components/displayMsgs/displayMsgs.scss
@@ -1,20 +1,21 @@
 @import '../../../styles/colors';
 
 .messageCard{
-    background-color: $lightOrange;
-    border: 2px solid $froggyGreen;
+    background-color: var(--secondary-color);
+    border: 2px solid var(--primary-color);
     border-radius: 10px;
     font-family: 'Monserrat', 'Ubuntu', sans-serif;
     margin: 10px;
+    color: var(--font-color);
 
     .modifyMsg{
-        color: $froggyGreen;
-        border-left: 2px solid $froggyGreen;
+        color: var(--primary-color);
+        border-left: 2px solid var(--primary-color);
 
         button{
             background-color: transparent;
             border: none;
-            color: $froggyGreen;
+            color: var(--primary-color);
             &.delete{
                 font-size: 1.5em;
                 font-weight: bold;
@@ -23,7 +24,7 @@
     }
     
     .msgDetails{
-        border-right: 2px solid $froggyGreen;
+        border-right: 2px solid var(--primary-color);
 
         .user{
             font-family: 'Mitr', 'Ubuntu', sans-serif;
@@ -31,7 +32,7 @@
         }
 
         .timeStamp{
-            color: $froggyGreen;
+            color: var(--primary-color);
         }
     }
 }
