--- a/src/javascripts/components/displayMsgs/displayMsgs.scss
+++ b/src/javascripts/components/displayMsgs/displayMsgs.scss
@@ -36,7 +36,7 @@
             font-family: 'Mitr', 'Ubuntu', sans-serif;
             font-size: 1.5em;
             max-width: 100%;
-            overflow-x: auto;
+            overflow-x: hidden;
         }
 
         .timeStamp{
