--- a/src/javascripts/components/nav/nav.scss
+++ b/src/javascripts/components/nav/nav.scss
@@ -47,6 +47,9 @@ nav{
   #gifBtnDiv{
     padding-left: 0;
 
+    #gifAttached{
+      display: none;
+    }
     #gifBtn{
       background-color: white;
 
