--- a/src/javascripts/components/nav/nav.scss
+++ b/src/javascripts/components/nav/nav.scss
@@ -39,7 +39,7 @@ nav{
     padding-left: 12px;
   }
 
-  #clearBtn, #sendBtn {
+  #clearBtn, #sendBtn, #updateBtn {
     position: absolute;
     right: 5px;
   }
