--- a/src/javascripts/components/nav/nav.scss
+++ b/src/javascripts/components/nav/nav.scss
@@ -52,6 +52,7 @@ nav{
     }
     #gifBtn{
       background-color: white;
+      border-radius: 0 5px 5px 0;
 
       &:hover{
         background-color: #6c757d;
